# tasks

./: README.md
atomics/: Tasks  analysis
atomics/1a/: CMakeLists.txt  main.cpp
atomics/1a_cas/: CMakeLists.txt  main.cpp
atomics/1b/: CMakeLists.txt  main.cpp
atomics/1b_cas/: CMakeLists.txt  main.cpp
freq/: CMakeLists.txt  main.cpp
scheduler/: CMakeLists.txt  How to build and run.txt
scheduler/scheduler/: CMakeLists.txt  scheduler.cpp  scheduler.h  scheduler.json  settings.h  sqllite3wrapper.cpp  sqllite3wrapper.h  tcp_client.cpp  tcp_client.h
trading/: bull_run.cpp  ccy_conversion.cpp  mwa.cpp  vwap_price_python.txt
